--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     </section>
     <marquee behavior="scroll" direction="left" style="color:#000;">© Minh Duc | Don't Report  Please | Mình có nhận dựng, lập trình website theo yêu cầu. Liên hệ với tôi tại mục liên hệ. Xin cảm ơn.</marquee>
     <section id="hero">
-        <h4>Xin chào đã đến với website của</h4>
+        <h4>Chào mừng bạn đến với website của</h4>
         <h2>Nguyễn Minh Đức</h2>
         <h1>Cung cấp Vans, Conveser chính hãng - Dịch vụ facebook.</h1>
-        <p>Vans,Converse sale off đến 70% - Ưu đãi gói dịch vụ facebook.<br><br> Mình làm về Front-end (html, css, javascript, Bootstrap 4, ReactJS, github, Mysql), nhà tuyển dụng có thể liên hệ với mình tại đây</p>
+        <p>Mình làm về Front-end (html, css, javascript, Bootstrap 4, ReactJS, github, Mysql), nhà tuyển dụng có thể liên hệ với mình tại đây</p>
         <a href="https://www.facebook.com/duc240702/"><button class="normal">Liên hệ</button></a>
     </section>
 
