--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Nguyễn Minh Đức</title>
     <link rel="stylesheet" href="./accsets/css/index.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-
     <link rel="stylesheet" href="http://use.fontawesome.com/releases/v5.0.4/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
@@ -33,7 +32,9 @@
             <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
+
     <marquee behavior="scroll" direction="left" style="color:#000;">© Minh Duc | Don't Report  Please | Mình có nhận dựng, lập trình website theo yêu cầu. Liên hệ với tôi tại mục liên hệ. Xin cảm ơn.</marquee>
+
     <section id="hero">
         <h4>Chào mừng bạn đến với website của</h4>
         <h2>Nguyễn Minh Đức</h2>
@@ -111,7 +112,7 @@
                 <img src="./accsets/img/vans2.png" alt="">
                 <div class="des">
                     <span>Vans off the wall</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <h5>Vans old skool - Etherea White</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -128,7 +129,7 @@
                 <img src="./accsets/img/vans3.png" alt="">
                 <div class="des">
                     <span>Vans off the wall</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <h5>Vans old skool - Drum White</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -145,7 +146,7 @@
                 <img src="./accsets/img/vans4.png" alt="">
                 <div class="des">
                     <span>Vans off the wall</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <h5>Vans old skool - Red White</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -162,7 +163,7 @@
                 <img src="./accsets/img/vans5.png" alt="">
                 <div class="des">
                     <span>Vans off the wall</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <h5>Vans old skool - Navy White</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -179,7 +180,7 @@
                 <img src="./accsets/img/vans6.png" alt="">
                 <div class="des">
                     <span>Vans off the wall</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <h5>Vans SK8 - Navy White</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -196,7 +197,7 @@
                 <img src="./accsets/img/vans7.png" alt="">
                 <div class="des">
                     <span>Vans off the wall</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <h5>Vans SK8 - Checkerboard</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -213,7 +214,7 @@
                 <img src="./accsets/img/vans8.png" alt="">
                 <div class="des">
                     <span>Vans off the wall</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <h5>Vans SK8 - Desert</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -242,7 +243,7 @@
                 <img src="./accsets/img/vans8.png" alt="">
                 <div class="des">
                     <span>Vans off the wall</span>
-                    <h5>Vans old skool - Black White</h5>
+                    <h5>Vans SK8 - Desert</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -259,7 +260,7 @@
                 <img src="./accsets/img/vans7.png" alt="">
                 <div class="des">
                     <span>Vans off the wall</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <h5>Vans SK8 - Checkerboard</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -276,7 +277,7 @@
                 <img src="./accsets/img/vans5.png" alt="">
                 <div class="des">
                     <span>Vans off the wall</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <h5>Vans old skool - Navy White</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -293,7 +294,7 @@
                 <img src="./accsets/img/vans6.png" alt="">
                 <div class="des">
                     <span>Vans off the wall</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <h5>Vans SK8 - Navy White</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -310,7 +311,7 @@
                 <img src="./accsets/img/vans4.png" alt="">
                 <div class="des">
                     <span>Vans off the wall</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <h5>Vans old skool - Red White</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -327,7 +328,7 @@
                 <img src="./accsets/img/vans3.png" alt="">
                 <div class="des">
                     <span>Vans off the wall</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <h5>Vans old skool - Drum White</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -344,7 +345,7 @@
                 <img src="./accsets/img/vans2.png" alt="">
                 <div class="des">
                     <span>Vans off the wall</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <h5>Vans old skool - Etherea White</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -361,7 +362,7 @@
                 <img src="./accsets/img/vans1.png" alt="">
                 <div class="des">
                     <span>Vans off the wall</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <h5>Vans old skool - Black White</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -462,5 +463,6 @@
     </div>
     
     <script src="./accsets/js/app.js"></script>
+
 </body>
 </html>
