--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="hero">
         <h4>Chào mừng bạn đến với website của</h4>
         <h2>Nguyễn Minh Đức</h2>
-        <h1>Cung cấp Vans, Conveser chính hãng - Dịch vụ facebook.</h1>
+        <h1>Cung cấp Vans, Conveser chính hãng.</h1>
         <p>Mình làm về Front-end (html, css, javascript, Bootstrap 4, ReactJS, github, Mysql), nhà tuyển dụng có thể liên hệ với mình tại đây</p>
         <a href="https://www.facebook.com/duc240702/"><button class="normal">Liên hệ</button></a>
     </section>
@@ -394,18 +394,18 @@
 
     <section id="banner3" class="section-p1">
         <div class="banner-box">
-            <h2>Tăng like</h2>
-            <h3>Ưu đãi giảm đến 50%</h3>
+            <h2>Vans old</h2>
+            <h3>Ưu đãi giảm đến 30%</h3>
 
         </div>
         <div class="banner-box banner-box2">
-            <h2>Tăng follow</h2>
-            <h3>Ưu đãi giảm đến 50%</h3>
+            <h2>Slip on</h2>
+            <h3>Ưu đãi giảm đến 20%</h3>
 
         </div>
         <div class="banner-box banner-box3">
-            <h2>Tăng share</h2>
-            <h3>Ưu đãi giảm đến 50%</h3>
+            <h2>Vans SK8</h2>
+            <h3>Ưu đãi giảm đến 10%</h3>
 
         </div>
     </section>
