--- a/index.html
+++ b/index.html
@@ -452,10 +452,10 @@
             <p>From App Store or Google Play</p>
             <div class="row">
                 <img src="./accsets/img/googleplay.jpg" alt="" style="width: 20%;">
-                <img src="./accsets/img/appstore.png" alt="" style="width: 20%; height: 36.2px;">
+                <img class="ios" src="./accsets/img/appstore.png" alt="" style="width: 20%;">
             </div>
             <p>Secured Payment Gateways</p>
-            <img src="./accsets/img/baybanking.jpg" alt="img error" style="width: 40%;">
+            <img class="baybanking" src="./accsets/img/baybanking.jpg" alt="img error">
         </div>
     </footer>
     <div class="copyright ">
