--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h4>Chào mừng bạn đến với website của</h4>
         <h2>Nguyễn Minh Đức</h2>
         <h1>Cung cấp Vans, Conveser chính hãng.</h1>
-        <p>Mình làm về Front-end (html, css, javascript, Bootstrap 4, ReactJS, github, Mysql), nhà tuyển dụng có thể liên hệ với mình tại đây</p>
+        <p>Mình là lập trình viên Front-end (html, css, javascript, Bootstrap 4, ReactJS, typeJS), nhà tuyển dụng có thể liên hệ với mình tại đây</p>
         <a href="https://www.facebook.com/duc240702/"><button class="normal">Liên hệ</button></a>
     </section>
 
