--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <p>Đăng nhập để cập nhập giỏ hàng và <span>nhận ưu đãi của chúng tôi.</span></p>
         </div>
         <div class="form">
-            <input type="text" placeholder="Nhập email của bạn">
-            <button id="login" class="normal">Đăng nhập</button>
+            <input id="login" type="text" placeholder="Nhập email của bạn">
+            <button class="normal" onclick="checkLogin()">Đăng nhập</button>
         </div>
     </section>
 
