--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
 </head>
 <body>
     <section id="header">
-        <a class="logo-web" href="#">Ducfrontend</a>
-
+        <a  class="logo-web" href="#">Đức Đạt Store</a>
         <div>
             <ul id="navbar">
-                <li><a class="active" href="#">Trang chủ</a></li>
-                <li><a href="#product1">Cửa hàng</a></li>
-                <li><a href="#newletter">Đăng nhập</a></li>
-                <li><a href="#install">Tiện ích</a></li>
-                <li><a href="#lienhe">Liên hệ</a></li>
+                <li><a class="trangchu active" href="#">Trang chủ</a></li>
+                <li><a class="cuahang" href="#product1">Cửa hàng</a></li>
+                <li><a class="dangnhap" href="#newletter">Đăng nhập</a></li>
+                <li><a class="tienich" href="#install">Tiện ích</a></li>
+                <li><a class="lienhe" href="#lienhe">Liên hệ</a></li>
                 <li><a href="https://www.facebook.com/duc240702/">Trợ giúp</a></li>
                 <li id="lg-bag"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
                 <i id="close" class="fas fa-times"></i>
@@ -32,15 +31,16 @@
             <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
-
+    <!--
     <marquee behavior="scroll" direction="left" style="color:#000;">© Minh Duc | Don't Report  Please | Mình có nhận dựng, lập trình website theo yêu cầu. Liên hệ với tôi tại mục liên hệ. Xin cảm ơn.</marquee>
-
+-->
     <section id="hero">
-        <h4>Chào mừng bạn đến với website của</h4>
-        <h2>Nguyễn Minh Đức</h2>
+        <div id="MyClockDisplay" class="clock" onload="showTime()"></div>
+        <h4>Chào mừng bạn đến với Store</h4>
+        <h2>Đức Đạt</h2>
         <h1>Cung cấp Vans, Conveser chính hãng.</h1>
-        <p>Mình là lập trình viên Front-end (html, css, javascript, Bootstrap 4, ReactJS, typeJS), nhà tuyển dụng có thể liên hệ với mình tại đây</p>
-        <a href="https://www.facebook.com/duc240702/"><button class="normal">Liên hệ</button></a>
+        <p>Nếu có trải nghiệm chưa hài lòng, vui lòng liên hệ với chúng tôi tại đây để góp ý trải nghiệm</p>
+        <a href="https://www.facebook.com/duc240702/"><button class="normal">Liên hệ admin</button></a>
     </section>
 
     <section id="feature" class="section-p1">
@@ -459,7 +459,7 @@
         </div>
     </footer>
     <div class="copyright ">
-        <p>Bản quyền bởi<a href=""><span> ©Duc247</span></a><br> Bên mình có nhận dựng, lập trình website theo yêu cầu. Liên hệ với chúng tôi tại mục contact. Xin cảm ơn</p>
+        <p>Bản quyền bởi<a href=""><span> ©DucDatStore</span></a><br> Bên mình có nhận dựng, lập trình website theo yêu cầu. Liên hệ với chúng tôi tại mục contact. Xin cảm ơn</p>
     </div>
     
     <script src="./accsets/js/app.js"></script>
