--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <section id="header">
-        <a class="logo-web" href="#">Ducfrontend</a>
+        <a class="logo-web" href="#">Đức Đạt Store</a>
 
         <div>
             <ul id="navbar">
@@ -173,6 +173,157 @@
             </div>
         </div>
     </section>
+
+    <section id="banner" class="section-m1">
+        <h4>Repair Services</h4>
+        <h2>Up to <span>70% off</span> all T-Shirts & Accessories</h2>
+        <button class="normal">Xem mẫu</button>
+    </section>
+
+    <section id="product1" class="section-p1">
+        <h2>Mẫu mới 2022 (SS-22)</h2>
+        <p>Full size - Sẵn tại Store</p>
+        <div class="pro-container">
+            <div class="pro">
+                <img src="./accsets/img/vans8.png" alt="">
+                <div class="des">
+                    <span>Vans off the wall</span>
+                    <h5>Vans SK8 - Desert</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>1.900.000 vnd</h4>
+                </div>
+                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="./accsets/img/vans7.png" alt="">
+                <div class="des">
+                    <span>Vans off the wall</span>
+                    <h5>Vans SK8 - Checkerboard</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>1.600.000 vnd</h4>
+                </div>
+                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="./accsets/img/vans5.png" alt="">
+                <div class="des">
+                    <span>Vans off the wall</span>
+                    <h5>Vans old skool - Navy White</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>1.300.000 vnd</h4>
+                </div>
+                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="./accsets/img/vans6.png" alt="">
+                <div class="des">
+                    <span>Vans off the wall</span>
+                    <h5>Vans SK8 - Navy White</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>1.650.000 vnd</h4>
+                </div>
+                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="./accsets/img/vans4.png" alt="">
+                <div class="des">
+                    <span>Vans off the wall</span>
+                    <h5>Vans old skool - Red White</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>1.000.000 vnd</h4>
+                </div>
+                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="./accsets/img/vans3.png" alt="">
+                <div class="des">
+                    <span>Vans off the wall</span>
+                    <h5>Vans old skool - Drum White</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>1.450.000 vnd</h4>
+                </div>
+                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="./accsets/img/vans2.png" alt="">
+                <div class="des">
+                    <span>Vans off the wall</span>
+                    <h5>Vans old skool - Etherea White</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>1.200.000 vnd</h4>
+                </div>
+                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="./accsets/img/vans1.png" alt="">
+                <div class="des">
+                    <span>Vans off the wall</span>
+                    <h5>Vans old skool - Black White</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>1.300.000 vnd</h4>
+                </div>
+                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+            </div>
+        </div>
+    </section>
+
+
+
     <footer id="lienhe" class="section-p1">
         <div class="col">
            <!-- <img class="logo" src="./logo" alt=""> -->
@@ -219,8 +370,12 @@
             <p>Secured Payment Gateways</p>
             <img class="baybanking" src="./accsets/img/baybanking.jpg" alt="img error">
         </div>
-    </footer>
 
+        <div id="MyClockDisplay" class="clock" onload="showTime()"></div>
+    </footer>
+    <div class="copyright ">
+        <p>Bản quyền bởi<a href=""><span> ©DucDatStore</span></a><br> Bên mình có nhận dựng, lập trình website theo yêu cầu. Liên hệ với chúng tôi tại mục contact. Xin cảm ơn</p>
+    </div>
     <script src="./accsets/js/app.js"></script>
 </body>
 </html>
