--- a/index.html
+++ b/index.html
@@ -22,12 +22,36 @@
                 <li><a class="lienhe" href="#lienhe">Liên hệ</a></li>
                 <li><a href="https://www.facebook.com/duc240702/">Trợ giúp</a></li>
                 <li id="lg-bag"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
+                <div class="boxcart">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Sản Phẩm</th>
+                                <th>Tên sản phẩm</th>
+                                <th>Giá tiền</th>
+                                <th>Chọn</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        <!--   <tr>
+                                <td><img src="./accsets/img/anh1.jpg" alt=""></td>
+                                <td>Vans</td>
+                                <td>100.000</td>
+                                <td>Xóa</td>
+                            </tr> -->
+                        </tbody>
+                    </table>
+                    <div class="SumPrice">
+                        <p>Thành Tiền: <span>0</span> VND</p>
+                        <h6>Vui lòng đăng nhập để thanh toán và mua hàng.</h6>
+                    </div>
+                </div>
                 <i id="close" class="fas fa-times"></i>
                 <!--<a href="" id="close"><i class="fas fa-times"></i></a>-->
             </ul>
         </div>
         <div id="mobile">
-            <a href="#"><i class='bx bx-cart-alt' ></i></a></li>
+        <!--   <a href="#"><i class='bx bx-cart-alt' ></i></a></li> --> 
             <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
@@ -40,7 +64,7 @@
         <h2>Đức Đạt</h2>
         <h1>Cung cấp Vans, Conveser chính hãng.</h1>
         <p>Nếu có trải nghiệm chưa hài lòng, vui lòng liên hệ với chúng tôi tại đây để góp ý trải nghiệm</p>
-        <a href="https://www.facebook.com/duc240702/"><button class="normal">Liên hệ admin</button></a>
+        <a href="https://www.messenger.com/duc240702/"><button class="normal">Liên hệ admin</button></a>
     </section>
 
     <section id="feature" class="section-p1">
@@ -103,9 +127,9 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.300.000 vnd</h4>
+                    <h4>1.300.000</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -120,9 +144,9 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.200.000 vnd</h4>
+                    <h4>1.200.000</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -137,9 +161,9 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.450.000 vnd</h4>
+                    <h4>1.450.000</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -154,9 +178,9 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.000.000 vnd</h4>
+                    <h4>1.000.000</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -171,9 +195,9 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.300.000 vnd</h4>
+                    <h4>1.300.000</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -188,9 +212,9 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.650.000 vnd</h4>
+                    <h4>1,650,000</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -205,9 +229,9 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.600.000 vnd</h4>
+                    <h4>1.600.000</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -222,9 +246,9 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.900.000 vnd</h4>
+                    <h4>1.900.000</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
         </div>
     </section>
@@ -251,9 +275,9 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.900.000 vnd</h4>
+                    <h4>1.900.000</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -268,9 +292,9 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.600.000 vnd</h4>
+                    <h4>1.600.000</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -285,9 +309,9 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.300.000 vnd</h4>
+                    <h4>1.300.000</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -302,9 +326,9 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.650.000 vnd</h4>
+                    <h4>1.650.000</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -319,9 +343,9 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.000.000 vnd</h4>
+                    <h4>1.000.000</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -336,9 +360,9 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.450.000 vnd</h4>
+                    <h4>1.450.000</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -353,7 +377,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.200.000 vnd</h4>
+                    <h4>1.200.000</h4>
                 </div>
                 <a href="#"><i class="bx bxs-cart-add cart"></i></a>
             </div>
@@ -370,9 +394,9 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.300.000 vnd</h4>
+                    <h4>1.300.000</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
         </div>
     </section>
