--- a/login.html
+++ b/login.html
@@ -22,13 +22,37 @@
                 <li><a href="#product1">Giỏ hàng</a></li>
                 <li><a href="#lienhe">Trợ giúp</a></li>
                 <li><a href="index.html">Đăng xuất</a></li>
-                <li id="lg-bag"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
+                <li id="lg-bag"><i class="fas fa-shopping-bag"></i></li>
+                <div class="boxcart">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Sản Phẩm</th>
+                                <th>Tên sản phẩm</th>
+                                <th>Giá tiền</th>
+                                <th>Chọn</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        <!--   <tr>
+                                <td><img src="./accsets/img/anh1.jpg" alt=""></td>
+                                <td>Vans</td>
+                                <td>100.000</td>
+                                <td>Xóa</td>
+                            </tr> -->
+                        </tbody>
+                    </table>
+                    <div class="SumPrice">
+                        <p>Thành Tiền: <span>0</span> VND</p>
+                        <button class="btn_cart">Thanh Toán</button>
+                    </div>
+                </div>
                 <i id="close" class="fas fa-times"></i>
                 <!--<a href="" id="close"><i class="fas fa-times"></i></a>-->
             </ul>
         </div>
         <div id="mobile">
-            <a href="#"><i class='bx bx-cart-alt' ></i></a></li>
+            <a href="#"><i class='bx bx-cart-alt'></i></a>
             <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
@@ -50,7 +74,7 @@
                     </div>
                     <h4>1.300.000 vnd</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -67,7 +91,7 @@
                     </div>
                     <h4>1.200.000 vnd</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -84,7 +108,7 @@
                     </div>
                     <h4>1.450.000 vnd</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -101,7 +125,7 @@
                     </div>
                     <h4>1.000.000 vnd</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -118,7 +142,7 @@
                     </div>
                     <h4>1.300.000 vnd</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -135,7 +159,7 @@
                     </div>
                     <h4>1.650.000 vnd</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -152,7 +176,7 @@
                     </div>
                     <h4>1.600.000 vnd</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -169,7 +193,7 @@
                     </div>
                     <h4>1.900.000 vnd</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
         </div>
     </section>
@@ -198,7 +222,7 @@
                     </div>
                     <h4>1.900.000 vnd</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -215,7 +239,7 @@
                     </div>
                     <h4>1.600.000 vnd</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -232,7 +256,7 @@
                     </div>
                     <h4>1.300.000 vnd</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -249,7 +273,7 @@
                     </div>
                     <h4>1.650.000 vnd</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -266,7 +290,7 @@
                     </div>
                     <h4>1.000.000 vnd</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -283,7 +307,7 @@
                     </div>
                     <h4>1.450.000 vnd</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -300,7 +324,7 @@
                     </div>
                     <h4>1.200.000 vnd</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
 
             <div class="pro">
@@ -317,7 +341,7 @@
                     </div>
                     <h4>1.300.000 vnd</h4>
                 </div>
-                <a href="#"><i class="bx bxs-cart-add cart"></i></a>
+                <button class="btn-cart"><i class="bx bxs-cart-add cart"></i></button>
             </div>
         </div>
     </section>
