--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a class="tienich" href="#install">Tiện ích</a></li>
                 <li><a class="lienhe" href="#lienhe">Liên hệ</a></li>
                 <li><a href="https://www.facebook.com/duc240702/">Trợ giúp</a></li>
-                <li id="lg-bag"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
+                <li id="lg-bag"><i class="fas fa-shopping-bag"></i></li>
                 <div class="boxcart">
                     <table>
                         <thead>
